Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110967

MySQL Prepared Statement QDateTime: Not Working

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.4.3, 6.5.0, 6.6.0
    • 6.4.2
    • SQL Support
    • All
    • c67cc6d57 (dev), 19db73bd8 (6.5), 598be12d4 (6.4)

    Description

      I have attached a simple test project illustrating the following:

      • Retrieving a datetime column using a prepared statement returns an invalid value
      • The same SELECT query non-prepared works correctly

      NOTE:

      • The code works with Qt 5.15.6
      • The code does not work on Qt 6.4.2
      • I am using a MySQL 8.0.27 server

      Attachments

        1. main.cpp
          3 kB
          Christian Ehrlicher
        2. MySqlTestProject.zip
          1 kB
          Rolf Moholth
        3. table_with_timestamp.sql
          2 kB
          Rolf Moholth
        For Gerrit Dashboard: QTBUG-110967
        # Subject Branch Project Status CR V

        Activity

          People

            chehrlic Christian Ehrlicher
            roffaboffa Rolf Moholth
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes